--- a/contact.html
+++ b/contact.html
@@ -126,74 +126,22 @@
 
 </div>
 
-<div class="row">
-<div class="col-lg-8 mb-5">
-<form action="mailto:thevedicwedding@gmail.com" method="POST" enctype="text/plain" onsubmit="return validateContactForm();">
-
-
-<div class="row form-group">
-<div class="col-md-6 mb-3 mb-md-0">
-<label class="text-black" for="fname">First Name</label>
-<input type="text" id="fname" name="First Name" class="form-control" style="color:#000;" required>
-</div>
-<div class="col-md-6">
-<label class="text-black" for="lname">Last Name</label>
-<input type="text" id="lname" name="Last Name" class="form-control" style="color:#000;" required>
-</div>
-</div>
-
-<div class="row form-group">
-
-<div class="col-md-12">
-<label class="text-black" for="email">Email</label> 
-<input type="email" id="email" name="Email" class="form-control" style="color:#000;" required>
-</div>
-</div>
-
-<div class="row form-group">
-
-<div class="col-md-12">
-<label class="text-black" for="subject">Subject</label> 
-<input type="text" id="subject" name="Subject" class="form-control" style="color:#000;">
-</div>
-</div>
-
-<div class="row form-group">
-<div class="col-md-12">
-<label class="text-black" for="message">Message</label> 
-<textarea name="Message" id="message" cols="30" rows="7" class="form-control" placeholder="Write your notes or questions here..." style="color:#000;"></textarea>
-</div>
-</div>
-
-<div class="row form-group">
-<div class="col-md-12">
-<input type="submit" value="Send Message" class="btn btn-primary py-2 px-4 text-white" style="background:#123458; border-color:#123458;">
-</div>
-</div>
-
-
-</form>
-</div>
-<div class="col-lg-3 ml-auto">
-<div class="mb-3">
-<p class="mb-0 font-weight-bold text-black">Address</p>
-<p class="mb-4">Shop no-3, AS-3, Block- B Arjunpur, Kolkata - 700059</p>
-
-<p class="mb-0 font-weight-bold text-black">Phone</p>
-<p class="mb-4"><a href="tel:+919007900710" style="color:#123458;">+91 9007900710</a></p>
-
-<p class="mb-0 font-weight-bold text-black">Email Address</p>
-<p class="mb-0"><a href="mailto:thevedicwedding@gmail.com" style="color:#123458;">thevedicwedding@gmail.com</a></p>
-
+<div class="row justify-content-center">
+  <div class="col-lg-6 mb-5">
+    <div class="contact-info-box p-4" style="background:#f7f3ef;border-radius:10px;box-shadow:0 2px 8px rgba(0,0,0,0.04);">
+      <h3 class="text-black mb-3" style="color:#d32f2f !important;">Contact Information</h3>
+      <p class="mb-2"><span class="font-weight-bold">Address:</span> Shop no-3, AS-3, Block- B Arjunpur, Kolkata - 700059</p>
+      <p class="mb-2"><span class="font-weight-bold">Phone:</span> <a href="tel:+919007900710" style="color:#123458;">+91 9007900710</a></p>
+      <p class="mb-2"><span class="font-weight-bold">Email:</span> <a href="mailto:thevedicwedding@gmail.com" style="color:#123458;">thevedicwedding@gmail.com</a></p>
+      <p class="mb-2"><span class="font-weight-bold">WhatsApp:</span> <a href="https://wa.me/919007900710" target="_blank" rel="noopener" style="color:#25D366;font-weight:600;"><span class="icon-whatsapp" style="font-size:1.2em;vertical-align:middle;margin-right:4px;"></span>Chat on WhatsApp</a></p>
+      <div class="mb-3 mt-4">
+        <iframe src="https://www.google.com/maps?q=Shop+no-3,+AS-3,+Block-+B+Arjunpur,+Kolkata+-+700059&output=embed" width="100%" height="220" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+      </div>
+      <div class="mb-3" style="text-align:center;">
+        <a href="https://www.google.com/maps/dir/?api=1&destination=Shop+no-3,+AS-3,+Block-+B+Arjunpur,+Kolkata+-+700059" target="_blank" rel="noopener" style="display:inline-block;background:#123458;color:#fff;font-weight:600;padding:10px 28px;border-radius:6px;text-decoration:none;font-size:1.08rem;box-shadow:0 2px 8px rgba(0,0,0,0.06);margin-top:8px;">Navigate with Google Maps</a>
+      </div>
+    </div>
   </div>
-  <div class="mb-3">
-    <iframe src="https://www.google.com/maps?q=Shop+no-3,+AS-3,+Block-+B+Arjunpur,+Kolkata+-+700059&output=embed" width="100%" height="220" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-  </div>
-  <div class="mb-3" style="text-align:center;">
-    <a href="https://www.google.com/maps/dir/?api=1&destination=Shop+no-3,+AS-3,+Block-+B+Arjunpur,+Kolkata+-+700059" target="_blank" rel="noopener" style="display:inline-block;background:#123458;color:#fff;font-weight:600;padding:10px 28px;border-radius:6px;text-decoration:none;font-size:1.08rem;box-shadow:0 2px 8px rgba(0,0,0,0.06);margin-top:8px;">Navigate with Google Maps</a>
-  </div>
-
-</div>
 </div>
 </div>
 </div>
@@ -224,10 +172,11 @@
       </div>
       <div class="col-12 col-md-4 text-center text-md-right">
         <span class="footer-section-title">Contact</span>
-        <span class="footer-contact ml-2">
-          <a href="mailto:thevedicwedding@gmail.com">thevedicwedding@gmail.com</a>
-          <span style="margin-left:10px;"><a href="tel:+919874567890">+91 98745 67890</a></span>
-        </span>
+<span class="footer-contact ml-2">
+  <a href="mailto:thevedicwedding@gmail.com">thevedicwedding@gmail.com</a>
+  &nbsp;|&nbsp;
+  <a href="https://wa.me/919007900710" target="_blank" rel="noopener" aria-label="WhatsApp" style="color:#25D366;font-weight:600;"><span class="icon-whatsapp" style="font-size:1.2em;vertical-align:middle;margin-right:4px;"></span>WhatsApp</a>
+</span>
         <div class="footer-copyright mt-2">© 2025 Pallab Photography</div>
       </div>
     </div>
@@ -332,18 +281,7 @@
 <script src="js/jquery.mousewheel.min.js"></script>
 
 <script src="js/main.js"></script>
-<script>
-function validateContactForm() {
-  var fname = document.getElementById('fname').value.trim();
-  var lname = document.getElementById('lname').value.trim();
-  var email = document.getElementById('email').value.trim();
-  if (!fname || !lname || !email) {
-    alert('Please fill in all mandatory fields: First Name, Last Name, and Email.');
-    return false;
-  }
-  return true;
-}
-</script>
+
 
 <script>
 $(document).ready(function(){
