--- a/contact.html
+++ b/contact.html
@@ -128,17 +128,19 @@
 
 <div class="row justify-content-center">
   <div class="col-lg-6 mb-5">
-    <div class="contact-info-box p-4" style="background:#f7f3ef;border-radius:10px;box-shadow:0 2px 8px rgba(0,0,0,0.04);">
-      <h3 class="text-black mb-3" style="color:#d32f2f !important;">Contact Information</h3>
+    <div class="contact-info-box p-4" style="background: linear-gradient(135deg, #f7f3ef 70%, #ffe3e3 100%); border-radius:18px; box-shadow:0 4px 24px 0 rgba(211,47,47,0.10), 0 1.5px 8px 0 rgba(0,0,0,0.04); border:1.5px solid #e0d2c2;">
+      <h3 class="text-black mb-3" style="color:#d32f2f !important; font-size:2.1rem; font-weight:800; letter-spacing:0.01em; text-shadow:0 2px 8px #f7cfcf33;">Contact Information</h3>
       <p class="mb-2"><span class="font-weight-bold">Address:</span> Shop no-3, AS-3, Block- B Arjunpur, Kolkata - 700059</p>
-      <p class="mb-2"><span class="font-weight-bold">Phone:</span> <a href="tel:+919007900710" style="color:#123458;">+91 9007900710</a></p>
-      <p class="mb-2"><span class="font-weight-bold">Email:</span> <a href="mailto:thevedicwedding@gmail.com" style="color:#123458;">thevedicwedding@gmail.com</a></p>
-      <p class="mb-2"><span class="font-weight-bold">WhatsApp:</span> <a href="https://wa.me/919007900710" target="_blank" rel="noopener" style="color:#25D366;font-weight:600;"><span class="icon-whatsapp" style="font-size:1.2em;vertical-align:middle;margin-right:4px;"></span>Chat on WhatsApp</a></p>
-      <div class="mb-3 mt-4">
+      <p class="mb-2"><span class="font-weight-bold">Phone:</span> <a href="tel:+919007900710" style="color:#123458; font-weight:600; font-size:1.13em;"><span class="icon-phone" style="font-size:1.1em;vertical-align:middle;margin-right:4px;color:#123458;"></span>+91 9007900710</a>
+        &nbsp;|&nbsp;
+        <a href="https://wa.me/919007900710" target="_blank" rel="noopener" style="color:#25D366;font-weight:600;font-size:1.13em;"><span class="icon-whatsapp" style="font-size:1.2em;vertical-align:middle;margin-right:4px;"></span>WhatsApp</a>
+      </p>
+      <p class="mb-2"><span class="font-weight-bold">Email:</span> <a href="mailto:thevedicwedding@gmail.com" style="color:#123458; font-weight:600; font-size:1.13em;"><span class="icon-mail_outline" style="font-size:1.1em;vertical-align:middle;margin-right:4px;color:#123458;"></span>thevedicwedding@gmail.com</a></p>
+      <div class="mb-3 mt-4 rounded-lg overflow-hidden" style="box-shadow:0 2px 12px 0 rgba(211,47,47,0.10); border:1.5px solid #e0d2c2;">
         <iframe src="https://www.google.com/maps?q=Shop+no-3,+AS-3,+Block-+B+Arjunpur,+Kolkata+-+700059&output=embed" width="100%" height="220" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </div>
       <div class="mb-3" style="text-align:center;">
-        <a href="https://www.google.com/maps/dir/?api=1&destination=Shop+no-3,+AS-3,+Block-+B+Arjunpur,+Kolkata+-+700059" target="_blank" rel="noopener" style="display:inline-block;background:#123458;color:#fff;font-weight:600;padding:10px 28px;border-radius:6px;text-decoration:none;font-size:1.08rem;box-shadow:0 2px 8px rgba(0,0,0,0.06);margin-top:8px;">Navigate with Google Maps</a>
+        <a href="https://www.google.com/maps/dir/?api=1&destination=Shop+no-3,+AS-3,+Block-+B+Arjunpur,+Kolkata+-+700059" target="_blank" rel="noopener" style="display:inline-block;background:linear-gradient(90deg,#d32f2f 60%,#b71c1c 100%);color:#fff;font-weight:700;padding:12px 32px;border-radius:8px;text-decoration:none;font-size:1.13rem;box-shadow:0 2px 8px rgba(211,47,47,0.10);margin-top:8px;letter-spacing:0.01em;transition:background 0.2s;">Navigate with Google Maps</a>
       </div>
     </div>
   </div>
@@ -174,8 +176,6 @@
         <span class="footer-section-title">Contact</span>
 <span class="footer-contact ml-2">
   <a href="mailto:thevedicwedding@gmail.com">thevedicwedding@gmail.com</a>
-  &nbsp;|&nbsp;
-  <a href="https://wa.me/919007900710" target="_blank" rel="noopener" aria-label="WhatsApp" style="color:#25D366;font-weight:600;"><span class="icon-whatsapp" style="font-size:1.2em;vertical-align:middle;margin-right:4px;"></span>WhatsApp</a>
 </span>
         <div class="footer-copyright mt-2">© 2025 Pallab Photography</div>
       </div>
@@ -190,58 +190,78 @@
 </div>
 <style>
   .site-footer-custom.redesigned-footer {
-    background: #D4C9BE;
+    background: linear-gradient(90deg, #D4C9BE 80%, #ffe3e3 100%);
     color: #111;
     font-family: 'Josefin Sans', Arial, sans-serif;
     border-top: none;
     margin-top: 40px;
     letter-spacing: 0.01em;
-    box-shadow: 0 -1px 6px rgba(0,0,0,0.03);
+    box-shadow: 0 -1px 12px rgba(211,47,47,0.07);
     font-size: 1.08rem;
     padding: 0;
+    border-top-left-radius: 18px;
+    border-top-right-radius: 18px;
   }
   .site-footer-custom .footer-section-title {
-    font-weight: 700;
+    font-weight: 800;
     color: #d32f2f;
-    font-size: 1.1rem;
+    font-size: 1.18rem;
     margin-right: 8px;
-    letter-spacing: 0.02em;
+    letter-spacing: 0.03em;
+    text-shadow:0 1.5px 6px #f7cfcf33;
+    text-transform: uppercase;
   }
   .site-footer-custom .footer-social-icons a {
     color: #d32f2f;
-    font-size: 1.3rem;
-    margin: 0 6px;
+    font-size: 1.45rem;
+    margin: 0 8px;
     display: inline-block;
-    transition: color 0.2s;
+    transition: color 0.2s, transform 0.2s;
+    filter: drop-shadow(0 1.5px 4px #f7cfcf33);
   }
   .site-footer-custom .footer-social-icons a:hover {
-    color: #111;
+    color: #fff;
+    background: #d32f2f;
+    border-radius: 50%;
+    transform: scale(1.13);
+    box-shadow: 0 2px 8px #d32f2f33;
   }
   .site-footer-custom .footer-links a {
     color: #111;
     text-decoration: none;
-    margin: 0 2px;
-    font-weight: 500;
-    transition: color 0.2s;
+    margin: 0 3px;
+    font-weight: 600;
+    font-size: 1.07em;
+    letter-spacing: 0.01em;
+    transition: color 0.2s, text-shadow 0.2s;
+    text-shadow:0 1.5px 4px #f7cfcf33;
   }
   .site-footer-custom .footer-links a:hover {
     color: #d32f2f;
     text-decoration: underline;
+    text-shadow:0 2px 8px #d32f2f33;
   }
   .site-footer-custom .footer-contact a {
     color: #d32f2f;
     text-decoration: none;
-    font-weight: 500;
-    transition: color 0.2s;
+    font-weight: 600;
+    font-size: 1.07em;
+    letter-spacing: 0.01em;
+    transition: color 0.2s, text-shadow 0.2s;
+    text-shadow:0 1.5px 4px #f7cfcf33;
   }
   .site-footer-custom .footer-contact a:hover {
     color: #111;
     text-decoration: underline;
+    text-shadow:0 2px 8px #d32f2f33;
   }
   .site-footer-custom .footer-copyright {
-    font-size: 0.98rem;
+    font-size: 1.01rem;
     color: #888;
     margin-top: 4px;
+    letter-spacing: 0.01em;
+    font-weight: 500;
+    text-shadow:0 1.5px 4px #f7cfcf33;
   }
   @media (max-width: 991.98px) {
     .site-footer-custom .footer-section-title {
