--- a/contact.html
+++ b/contact.html
@@ -174,9 +174,9 @@
       </div>
       <div class="col-12 col-md-4 text-center text-md-right">
         <span class="footer-section-title">Contact</span>
-<span class="footer-contact ml-2">
-  <a href="mailto:thevedicwedding@gmail.com">thevedicwedding@gmail.com</a>
-</span>
+        <span class="footer-contact ml-2">
+          <a href="mailto:info@thevedicwedding.com">info@thevedicwedding.com</a>
+        </span>
         <div class="footer-copyright mt-2">© 2025 Pallab Photography</div>
       </div>
     </div>
@@ -190,78 +190,58 @@
 </div>
 <style>
   .site-footer-custom.redesigned-footer {
-    background: linear-gradient(90deg, #D4C9BE 80%, #ffe3e3 100%);
+    background: #D4C9BE;
     color: #111;
     font-family: 'Josefin Sans', Arial, sans-serif;
     border-top: none;
     margin-top: 40px;
     letter-spacing: 0.01em;
-    box-shadow: 0 -1px 12px rgba(211,47,47,0.07);
+    box-shadow: 0 -1px 6px rgba(0,0,0,0.03);
     font-size: 1.08rem;
     padding: 0;
-    border-top-left-radius: 18px;
-    border-top-right-radius: 18px;
   }
   .site-footer-custom .footer-section-title {
-    font-weight: 800;
+    font-weight: 700;
     color: #d32f2f;
-    font-size: 1.18rem;
+    font-size: 1.1rem;
     margin-right: 8px;
-    letter-spacing: 0.03em;
-    text-shadow:0 1.5px 6px #f7cfcf33;
-    text-transform: uppercase;
+    letter-spacing: 0.02em;
   }
   .site-footer-custom .footer-social-icons a {
     color: #d32f2f;
-    font-size: 1.45rem;
-    margin: 0 8px;
+    font-size: 1.3rem;
+    margin: 0 6px;
     display: inline-block;
-    transition: color 0.2s, transform 0.2s;
-    filter: drop-shadow(0 1.5px 4px #f7cfcf33);
+    transition: color 0.2s;
   }
   .site-footer-custom .footer-social-icons a:hover {
-    color: #fff;
-    background: #d32f2f;
-    border-radius: 50%;
-    transform: scale(1.13);
-    box-shadow: 0 2px 8px #d32f2f33;
+    color: #111;
   }
   .site-footer-custom .footer-links a {
     color: #111;
     text-decoration: none;
-    margin: 0 3px;
-    font-weight: 600;
-    font-size: 1.07em;
-    letter-spacing: 0.01em;
-    transition: color 0.2s, text-shadow 0.2s;
-    text-shadow:0 1.5px 4px #f7cfcf33;
+    margin: 0 2px;
+    font-weight: 500;
+    transition: color 0.2s;
   }
   .site-footer-custom .footer-links a:hover {
     color: #d32f2f;
     text-decoration: underline;
-    text-shadow:0 2px 8px #d32f2f33;
   }
   .site-footer-custom .footer-contact a {
     color: #d32f2f;
     text-decoration: none;
-    font-weight: 600;
-    font-size: 1.07em;
-    letter-spacing: 0.01em;
-    transition: color 0.2s, text-shadow 0.2s;
-    text-shadow:0 1.5px 4px #f7cfcf33;
+    font-weight: 500;
+    transition: color 0.2s;
   }
   .site-footer-custom .footer-contact a:hover {
     color: #111;
     text-decoration: underline;
-    text-shadow:0 2px 8px #d32f2f33;
   }
   .site-footer-custom .footer-copyright {
-    font-size: 1.01rem;
+    font-size: 0.98rem;
     color: #888;
     margin-top: 4px;
-    letter-spacing: 0.01em;
-    font-weight: 500;
-    text-shadow:0 1.5px 4px #f7cfcf33;
   }
   @media (max-width: 991.98px) {
     .site-footer-custom .footer-section-title {
