--- a/index.html
+++ b/index.html
@@ -5,11 +5,31 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
+
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/magnific-popup.css">
+  <link rel="stylesheet" href="css/jquery-ui.css">
   <link rel="stylesheet" href="css/owl.carousel.min.css">
+  <link rel="stylesheet" href="css/owl.theme.default.min.css">
+
+  <link rel="stylesheet" href="css/lightgallery.min.css">    
+
+  <link rel="stylesheet" href="css/bootstrap-datepicker.css">
+
+  <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
+
+  <link rel="stylesheet" href="css/swiper.css">
+
+  <link rel="stylesheet" href="css/aos.css">
+
   <link rel="stylesheet" href="css/style.css">
+  <style>
+    h2 {
+      color: #d32f2f !important;
+    }
+  </style>
 
 </head>
 <body style="color: #111;">
@@ -17,7 +37,6 @@
   <div class="site-wrap">
 
 
-    <!-- Mobile menu markup can be removed if not used, but keeping for responsive nav -->
     <div class="site-mobile-menu">
       <div class="site-mobile-menu-header">
         <div class="site-mobile-menu-close mt-3">
@@ -229,7 +248,213 @@
     
   </div>
 
-  <!-- Custom styles moved to style.css for performance -->
+
+  <style>
+    .site-footer-custom.redesigned-footer {
+      background: #D4C9BE;
+      color: #111;
+      font-family: 'Josefin Sans', Arial, sans-serif;
+      border-top: none;
+      margin-top: 40px;
+      letter-spacing: 0.01em;
+      box-shadow: 0 -1px 6px rgba(0,0,0,0.03);
+      font-size: 1.08rem;
+      padding: 0;
+    }
+    .site-footer-custom .footer-section-title {
+      font-weight: 700;
+      color: #d32f2f;
+      font-size: 1.1rem;
+      margin-right: 8px;
+      letter-spacing: 0.02em;
+    }
+    .site-footer-custom .footer-social-icons a {
+      color: #d32f2f;
+      font-size: 1.3rem;
+      margin: 0 6px;
+      display: inline-block;
+      transition: color 0.2s;
+    }
+    .site-footer-custom .footer-social-icons a:hover {
+      color: #111;
+    }
+    .site-footer-custom .footer-links a {
+      color: #111;
+      text-decoration: none;
+      margin: 0 2px;
+      font-weight: 500;
+      transition: color 0.2s;
+    }
+    .site-footer-custom .footer-links a:hover {
+      color: #d32f2f;
+      text-decoration: underline;
+    }
+    .site-footer-custom .footer-contact a {
+      color: #d32f2f;
+      text-decoration: none;
+      font-weight: 500;
+      transition: color 0.2s;
+    }
+    .site-footer-custom .footer-contact a:hover {
+      color: #111;
+      text-decoration: underline;
+    }
+    .site-footer-custom .footer-copyright {
+      font-size: 0.98rem;
+      color: #888;
+      margin-top: 4px;
+    }
+    @media (max-width: 991.98px) {
+      .site-footer-custom .footer-section-title {
+        display: block;
+        margin-bottom: 4px;
+      }
+      .site-footer-custom .footer-social-icons,
+      .site-footer-custom .footer-links,
+      .site-footer-custom .footer-contact {
+        display: block;
+        margin: 0 auto 8px auto;
+      }
+      .site-footer-custom .footer-copyright {
+        margin-top: 8px;
+      }
+      .site-footer-custom .row > div {
+        margin-bottom: 10px;
+      }
+    }
+  </style>
+  <style>
+    /* Responsive slider height and text for mobile */
+    @media (max-width: 991.98px) {
+      .site-blocks-cover {
+        min-height: 350px !important;
+        height: 38vh !important;
+        max-height: 420px !important;
+        width: 100vw !important;
+        padding: 0 !important;
+        margin: 0 !important;
+        background: #000 !important;
+      }
+      .slide-one-item {
+        min-height: 350px !important;
+        height: 38vh !important;
+        max-height: 420px !important;
+      }
+      .slide-item {
+        min-height: 350px !important;
+        height: 38vh !important;
+        max-height: 420px !important;
+        width: 100vw !important;
+        background-size: cover !important;
+        background-position: center !important;
+        background-repeat: no-repeat !important;
+        background-color: #000 !important;
+        display: block !important;
+      }
+      .display-4 {
+        font-size: 2rem;
+        margin-top: 70px !important;
+      }
+      .slider-spacer {
+        height: 16px !important;
+      }
+      body {
+        padding-top: 60px !important;
+      }
+    }
+    @media (min-width: 992px) {
+      .site-blocks-cover,
+      .site-blocks-cover .slide-one-item,
+      .site-blocks-cover .slide-item {
+        min-height: 100vh !important;
+        height: 100vh !important;
+        width: 100vw !important;
+        padding: 0 !important;
+        margin: 0 !important;
+      }
+      body {
+        padding-top: 0 !important;
+      }
+    }
+  </style>
+
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="js/jquery-migrate-3.0.1.min.js"></script>
+  <script src="js/jquery-ui.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/jquery.stellar.min.js"></script>
+  <script src="js/jquery.countdown.min.js"></script>
+  <script src="js/jquery.magnific-popup.min.js"></script>
+  <script src="js/bootstrap-datepicker.min.js"></script>
+  <script src="js/swiper.min.js"></script>
+  <script src="js/aos.js"></script>
+
+  <script src="js/picturefill.min.js"></script>
+  <script src="js/lightgallery-all.min.js"></script>
+  <script src="js/jquery.mousewheel.min.js"></script>
+
+  <script src="js/main.js"></script>
+  <style>
+    .navbar-solid {
+      background: #fff !important;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.04) !important;
+      transition: background 0.3s, box-shadow 0.3s;
+    }
+    .site-navbar.fixed-top {
+      position: fixed !important;
+      top: 0;
+      left: 0;
+      right: 0;
+      width: 100vw;
+      z-index: 1030;
+    }
+    body {
+      padding-top: 80px !important;
+    }
+    @media (max-width: 991.98px) {
+      body {
+        padding-top: 60px !important;
+      }
+    }
+  </style>
+  <script>
+    // Always solid navbar, no transparency
+    (function() {
+      var navbar = document.getElementById('main-navbar');
+      navbar.classList.add('navbar-solid');
+      navbar.classList.remove('navbar-transparent');
+      navbar.style.background = '#fff'; // Change to your theme color if needed
+    })();
+  </script>
+  <script>
+    $(document).ready(function(){
+      // Initialize Owl Carousel for home slider (ensure only one instance and after DOM is ready)
+      setTimeout(function() {
+        if ($('.slide-one-item').length && typeof $.fn.owlCarousel === 'function') {
+          $('.slide-one-item').owlCarousel({
+            items: 1,
+            loop: true,
+            autoplay: true,
+            autoplayTimeout: 3000,
+            autoplayHoverPause: false,
+            nav: false, // Remove left/right arrows
+            dots: true,
+            animateOut: 'fadeOut',
+            animateIn: 'fadeIn',
+            smartSpeed: 1000
+          });
+        }
+      }, 200);
+    });
+  </script>
+  
+  <script>
+    $(document).ready(function(){
+      $('#lightgallery').lightGallery();
+    });
+  </script>
 
 
 </body>
