--- a/index.html
+++ b/index.html
@@ -111,34 +111,101 @@
     </header>
 
 
+    <!-- Mobile Static Image Start -->
+    <div class="site-blocks-cover d-block d-lg-none" id="mobile-landing-image" style="padding:0; background: none; border: none; box-shadow: none; min-height:100vh; height:100vh; width:100vw; position:relative;">
+      <img src="images/mobile-landing.jpg" alt="Mobile Landing" style="width:100vw; height:100vh; object-fit:cover; object-position:center; display:block;">
+    </div>
+    <div class="d-block d-lg-none" style="height:40px;"></div>
+    <!-- Mobile Static Image End -->
 
 
-
-    <!-- Image Slider Start: now visible on all devices -->
-    <div class="site-blocks-cover overlay" id="home-slider" style="padding: 0; background: #000; border: none; box-shadow: none; min-height: 350px; height: 38vh; max-height: 420px; width: 100vw; position: relative; border-radius: 0 !important;">
-      <div class="slide-one-item home-slider owl-carousel">
-        <div class="slide-item" style="background-image: url('images/img_1.jpg'); min-height: 350px; height: 38vh; max-height: 420px; width: 100vw; background-size: cover; background-position: center; background-color: #000; border: none !important; box-shadow: none !important; border-radius: 0 !important; display: block;"></div>
-        <div class="slide-item" style="background-image: url('images/img_2.jpg'); min-height: 350px; height: 38vh; max-height: 420px; width: 100vw; background-size: cover; background-position: center; background-color: #000; border: none !important; box-shadow: none !important; border-radius: 0 !important; display: block;"></div>
-        <div class="slide-item" style="background-image: url('images/img_3.jpg'); min-height: 350px; height: 38vh; max-height: 420px; width: 100vw; background-size: cover; background-position: center; background-color: #000; border: none !important; box-shadow: none !important; border-radius: 0 !important; display: block;"></div>
-        <div class="slide-item" style="background-image: url('images/img_4.jpg'); min-height: 350px; height: 38vh; max-height: 420px; width: 100vw; background-size: cover; background-position: center; background-color: #000; border: none !important; box-shadow: none !important; border-radius: 0 !important; display: block;"></div>
-        <div class="slide-item" style="background-image: url('images/img_5.jpg'); min-height: 350px; height: 38vh; max-height: 420px; width: 100vw; background-size: cover; background-position: center; background-color: #000; border: none !important; box-shadow: none !important; border-radius: 0 !important; display: block;"></div>
+    <!-- Parallax Slider Section -->
+    <section id="parallax-slider" style="position:relative;">
+      <div class="site-blocks-cover overlay d-none d-lg-block" data-aos="fade" id="home-slider" style="padding: 0; background: none; border: none; box-shadow: none;">
+        <div class="slide-one-item home-slider owl-carousel">
+          <div class="slide-item" style="background-image: url('images/img_1.jpg'); min-height: 650px; height: 65vh; background-size: cover; background-position: center; border: none; box-shadow: none;"></div>
+          <div class="slide-item" style="background-image: url('images/img_2.jpg'); min-height: 650px; height: 65vh; background-size: cover; background-position: center; border: none; box-shadow: none;"></div>
+          <div class="slide-item" style="background-image: url('images/img_3.jpg'); min-height: 650px; height: 65vh; background-size: cover; background-position: center; border: none; box-shadow: none;"></div>
+          <div class="slide-item" style="background-image: url('images/img_4.jpg'); min-height: 650px; height: 65vh; background-size: cover; background-position: center; border: none; box-shadow: none;"></div>
+          <div class="slide-item" style="background-image: url('images/img_5.jpg'); min-height: 650px; height: 65vh; background-size: cover; background-position: center; border: none; box-shadow: none;"></div>
+        </div>
       </div>
-    </div>
-    <!-- Image Slider End -->
+      <div class="slider-spacer d-none d-lg-block" style="height: 40px; width: 100%;"></div>
+    </section>
 
-    <!-- Add space, H1 and description below slider -->
-    <div class="slider-spacer" style="height: 32px; width: 100%;"></div>
-    <div class="container text-center mb-4">
-      <h1 class="display-4" style="color: #d32f2f; margin-bottom: 18px;">The Vedic Wedding</h1>
-      <p class="lead" style="max-width: 600px; margin: 0 auto; color: #444;">
-        Capturing timeless moments, traditions, and emotions. Explore our gallery of fashion, food, products, pre-wedding, wedding, and baby photography.
-      </p>
-    </div>
+    <!-- Parallax Text Section -->
+    <section id="parallax-text" style="background:#fff;position:relative;z-index:2;">
+      <div class="container-fluid py-5" data-aos="fade-up">
+        <div class="row justify-content-center">
+          <div class="col-md-8 text-center">
+            <h2 class="display-4" style="color:#d32f2f;font-weight:700;">Welcome to Pallab Photography</h2>
+            <p style="font-size:1.25rem;color:#444;max-width:700px;margin:0 auto;">Capturing moments, telling stories. Explore our gallery and discover the artistry behind every frame.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Parallax Image Sections -->
+    <section id="parallax-images">
+      <div class="parallax-image" style="background-image:url('images/img_1.jpg');height:400px;background-attachment:fixed;background-size:cover;background-position:center;position:relative;"></div>
+      <div class="container-fluid py-5" data-aos="fade-up">
+        <div class="row justify-content-center">
+          <div class="col-md-8 text-center">
+            <h3 style="color:#d32f2f;font-weight:600;">Fashion</h3>
+            <p style="color:#444;">Experience the elegance and creativity of our fashion shoots.</p>
+          </div>
+        </div>
+      </div>
+      <div class="parallax-image" style="background-image:url('images/img_2.jpg');height:400px;background-attachment:fixed;background-size:cover;background-position:center;position:relative;"></div>
+      <div class="container-fluid py-5" data-aos="fade-up">
+        <div class="row justify-content-center">
+          <div class="col-md-8 text-center">
+            <h3 style="color:#d32f2f;font-weight:600;">Food</h3>
+            <p style="color:#444;">Delicious moments captured with artistry and passion.</p>
+          </div>
+        </div>
+      </div>
+      <div class="parallax-image" style="background-image:url('images/img_3.jpg');height:400px;background-attachment:fixed;background-size:cover;background-position:center;position:relative;"></div>
+      <div class="container-fluid py-5" data-aos="fade-up">
+        <div class="row justify-content-center">
+          <div class="col-md-8 text-center">
+            <h3 style="color:#d32f2f;font-weight:600;">Product</h3>
+            <p style="color:#444;">Showcasing products with style and clarity.</p>
+          </div>
+        </div>
+      </div>
+      <div class="parallax-image" style="background-image:url('images/img_4.jpg');height:400px;background-attachment:fixed;background-size:cover;background-position:center;position:relative;"></div>
+      <div class="container-fluid py-5" data-aos="fade-up">
+        <div class="row justify-content-center">
+          <div class="col-md-8 text-center">
+            <h3 style="color:#d32f2f;font-weight:600;">Pre Wedding</h3>
+            <p style="color:#444;">Romantic stories before the big day, beautifully told.</p>
+          </div>
+        </div>
+      </div>
+      <div class="parallax-image" style="background-image:url('images/img_5.jpg');height:400px;background-attachment:fixed;background-size:cover;background-position:center;position:relative;"></div>
+      <div class="container-fluid py-5" data-aos="fade-up">
+        <div class="row justify-content-center">
+          <div class="col-md-8 text-center">
+            <h3 style="color:#d32f2f;font-weight:600;">Wedding</h3>
+            <p style="color:#444;">Cherishing the magic and emotion of every wedding.</p>
+          </div>
+        </div>
+      </div>
+      <div class="parallax-image" style="background-image:url('images/img_6.jpg');height:400px;background-attachment:fixed;background-size:cover;background-position:center;position:relative;"></div>
+      <div class="container-fluid py-5" data-aos="fade-up">
+        <div class="row justify-content-center">
+          <div class="col-md-8 text-center">
+            <h3 style="color:#d32f2f;font-weight:600;">Baby</h3>
+            <p style="color:#444;">Capturing the innocence and joy of childhood.</p>
+          </div>
+        </div>
+      </div>
+    </section>
 
 
 
-
-    <div class="container-fluid">
+    <div class="container-fluid" data-aos="fade" data-aos-delay="500">
       <div class="row">
         <div class="col-lg-4">
 
@@ -203,44 +270,11 @@
 
 
       </div>
-
     </div>
 
-    <!-- Footer Start -->
-    <footer class="site-footer-custom redesigned-footer">
-      <div class="container-fluid">
-        <div class="row align-items-center py-3">
-          <div class="col-12 col-md-4 text-center text-md-left mb-2 mb-md-0">
-            <span class="footer-section-title">Socials</span>
-            <span class="footer-social-icons ml-2">
-              <a href="https://www.facebook.com/thevedicwedding" target="_blank" rel="noopener" aria-label="Facebook"><span class="icon-facebook"></span></a>
-              <a href="https://www.pinterest.com/thevedicwedding" target="_blank" rel="noopener" aria-label="Pinterest"><span class="icon-pinterest"></span></a>
-              <a href="https://www.behance.net/thevedicwedding" target="_blank" rel="noopener" aria-label="Behance"><span class="icon-behance"></span></a>
-              <a href="https://www.instagram.com/thevedicwedding" target="_blank" rel="noopener" aria-label="Instagram"><span class="icon-instagram"></span></a>
-              <a href="https://www.youtube.com/@thevedicwedding" target="_blank" rel="noopener" aria-label="YouTube"><span class="icon-youtube-play"></span></a>
-            </span>
-          </div>
-          <div class="col-12 col-md-4 text-center mb-2 mb-md-0">
-            <span class="footer-section-title">Sitemap</span>
-            <span class="footer-links ml-2">
-              <a href="index.html">Home</a> |
-              <a href="single.html">Gallery</a> |
-              <a href="video.html">Video</a> |
-              <a href="about.html">About</a> |
-              <a href="contact.html">Contact</a>
-            </span>
-          </div>
-          <div class="col-12 col-md-4 text-center text-md-right">
-            <span class="footer-section-title">Contact</span>
-            <span class="footer-contact ml-2">
-              <a href="mailto:info@thevedicwedding.com">info@thevedicwedding.com</a>
-            </span>
-            <div class="footer-copyright mt-2">© 2025 Pallab Photography</div>
-          </div>
-        </div>
-      </div>
+    <footer class="site-footer-custom">
+      <div class="footer-content">© 2025 Pallab Photography</div>
     </footer>
-    <!-- Footer End -->
 
     
 
@@ -248,136 +282,25 @@
     
   </div>
 
-
   <style>
-    .site-footer-custom.redesigned-footer {
+    .site-footer-custom {
       background: #D4C9BE;
       color: #111;
+      text-align: center;
+      padding: 18px 0 14px 0;
+      font-size: 1.08rem;
       font-family: 'Josefin Sans', Arial, sans-serif;
       border-top: none;
       margin-top: 40px;
       letter-spacing: 0.01em;
       box-shadow: 0 -1px 6px rgba(0,0,0,0.03);
-      font-size: 1.08rem;
-      padding: 0;
     }
-    .site-footer-custom .footer-section-title {
-      font-weight: 700;
-      color: #d32f2f;
-      font-size: 1.1rem;
-      margin-right: 8px;
-      letter-spacing: 0.02em;
-    }
-    .site-footer-custom .footer-social-icons a {
-      color: #d32f2f;
-      font-size: 1.3rem;
-      margin: 0 6px;
-      display: inline-block;
-      transition: color 0.2s;
-    }
-    .site-footer-custom .footer-social-icons a:hover {
-      color: #111;
-    }
-    .site-footer-custom .footer-links a {
-      color: #111;
-      text-decoration: none;
-      margin: 0 2px;
+    .site-footer-custom .footer-content {
+      margin: 0 auto;
       font-weight: 500;
-      transition: color 0.2s;
-    }
-    .site-footer-custom .footer-links a:hover {
-      color: #d32f2f;
-      text-decoration: underline;
-    }
-    .site-footer-custom .footer-contact a {
-      color: #d32f2f;
-      text-decoration: none;
-      font-weight: 500;
-      transition: color 0.2s;
-    }
-    .site-footer-custom .footer-contact a:hover {
-      color: #111;
-      text-decoration: underline;
-    }
-    .site-footer-custom .footer-copyright {
-      font-size: 0.98rem;
-      color: #888;
-      margin-top: 4px;
-    }
-    @media (max-width: 991.98px) {
-      .site-footer-custom .footer-section-title {
-        display: block;
-        margin-bottom: 4px;
-      }
-      .site-footer-custom .footer-social-icons,
-      .site-footer-custom .footer-links,
-      .site-footer-custom .footer-contact {
-        display: block;
-        margin: 0 auto 8px auto;
-      }
-      .site-footer-custom .footer-copyright {
-        margin-top: 8px;
-      }
-      .site-footer-custom .row > div {
-        margin-bottom: 10px;
-      }
+      letter-spacing: 0.01em;
     }
   </style>
-  <style>
-    /* Responsive slider height and text for mobile */
-    @media (max-width: 991.98px) {
-      .site-blocks-cover {
-        min-height: 350px !important;
-        height: 38vh !important;
-        max-height: 420px !important;
-        width: 100vw !important;
-        padding: 0 !important;
-        margin: 0 !important;
-        background: #000 !important;
-      }
-      .slide-one-item {
-        min-height: 350px !important;
-        height: 38vh !important;
-        max-height: 420px !important;
-      }
-      .slide-item {
-        min-height: 350px !important;
-        height: 38vh !important;
-        max-height: 420px !important;
-        width: 100vw !important;
-        background-size: cover !important;
-        background-position: center !important;
-        background-repeat: no-repeat !important;
-        background-color: #000 !important;
-        display: block !important;
-      }
-      .display-4 {
-        font-size: 2rem;
-        margin-top: 70px !important;
-      }
-      .slider-spacer {
-        height: 16px !important;
-      }
-      body {
-        padding-top: 60px !important;
-      }
-    }
-    @media (min-width: 992px) {
-      .site-blocks-cover,
-      .site-blocks-cover .slide-one-item,
-      .site-blocks-cover .slide-item {
-        min-height: 100vh !important;
-        height: 100vh !important;
-        width: 100vw !important;
-        padding: 0 !important;
-        margin: 0 !important;
-      }
-      body {
-        padding-top: 0 !important;
-      }
-    }
-  </style>
-
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
   <script src="js/jquery-ui.js"></script>
@@ -455,7 +378,6 @@
       $('#lightgallery').lightGallery();
     });
   </script>
-
 
 </body>
 </html>
